# book-writing-hackathon-speckitplus-

./: CLAUDE.md
.specify/memory/: constitution.md
backend/: .gitignore  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieving.py
book-site/: docusaurus.config.ts  package-lock.json  package.json
book-site/docs/module-1/: architecture.md  communication.md  controllers.md  index.md  launch.md  packages.md  urdf.md
book-site/docs/module-2/: index.md
book-site/src/theme/: Layout.tsx
history/prompts/001-embedding-pipeline/: 001-embedding-pipeline-spec.spec.prompt.md  002-embedding-pipeline-plan.plan.prompt.md  003-embedding-pipeline-implementation.phr.md
history/prompts/001-rag-agent/: 004-rag-agent-output-format-clarification.phr.md  005-rag-agent-implementation-plan.phr.md  006-rag-agent-tasks-generation.phr.md  007-rag-agent-implementation-complete.phr.md  008-rag-agent-sources-format-clarification.phr.md  empty-answer-resolution.phr.prompt.md  groq-integration-complete.phr.prompt.md  implementation-complete.phr.prompt.md  tasks-generated.phr.prompt.md
specs/001-docusaurus-book-layout/: spec.md
specs/001-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-agent/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-module/: plan.md
specs/005-qdrant-retrieval-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-frontend-rag-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+23 files in other folders)
